# rg_cam

./: GoodLinks  LICENSE  README.txt  bg_sub.cpp  bgfg_segm.cpp
Chessboard/: calibration.py
Segmentation/: CMake  CMakeLists.txt  GoodLinks  README.md  bgfg_segm.cpp
Segmentation/inc/: foreground.h  projection.h  python_api.h  rg_ogl.hpp
Segmentation/src/: .3d_image_rendering.py.swp  .parser.py.swp  3d_image_rendering.py  SimpleFragmentShader.txt  SimpleVertexShader.txt  bgfg_segm.cpp  blender_parser.py  foreground.cpp  parser.py  parsetest.py  projection.cpp  python_api.cpp
